[tool.poetry]
name = "sqltotests"
version = "0.1.0"
description = "autotest tedious sql qureies"
authors = ["G-Hung <geoffrey12177@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlglot = "^25.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
